--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,36 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome to pepTalk!</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>ProteinBot 🧬</title>
+    <link rel="stylesheet" href="indexstyle.css" />
   </head>
   <body>
-    <div class="chat-container" style="text-align: center; padding: 50px 30px">
-      <h1 style="color: #ffffff; font-size: 2.2em">🌟 Meet pepTalk!</h1>
-      <p style="font-size: 1.2em; color: #ffffff">
-        Your friendly guide to all things protein!
-      </p>
-      <img
-        src="assets/protein-emoji.png"
-        alt="Protein Emoji"
-        width="100"
-        style="margin: 20px auto"
-      />
-      <a href="chat.html">
-        <button
-          style="
-            padding: 12px 24px;
-            font-size: 1.1em;
-            border-radius: 12px;
-            background-color: #7e57c2;
-            color: white;
-            border: none;
-            cursor: pointer;
-          "
-        >
-          🚀 Start Chatting
-        </button>
-      </a>
+    <div class="hero-container">
+      <div class="text-container">
+        <h1>pepTalk! 🧬</h1>
+        <p>
+          🧠 It’s not just a chatbot... it’s protein-synthesis with a
+          personality — and now the proteins talk back.
+        </p>
+        <a href="chat.html">
+          <button class="start-chat-btn">Start Chatting</button>
+        </a>
+      </div>
     </div>
   </body>
 </html>
